--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="captain">Vote for Captain</label>
+                <label for="captain">Choice of first captain</label>
                 <select id="captain" name="captain" required>
                     <option value="" disabled selected>Select a player</option>
                     <!-- Add player options here -->
@@ -78,7 +78,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="viceCaptain">Vote for Vice Captain</label>
+                <label for="viceCaptain">Choice of second captain</label>
                 <select id="viceCaptain" name="viceCaptain" required>
                     <option value="" disabled selected>Select a player</option>
                     <!-- Add player options here -->
